--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+/* @font-face{
+  font-family: Poppins;
+  src: url('../public/Poppins/Poppins-Regular.ttf')
+} */
