--- a/Frontend/src/pages/Analytics/Analytics.css
+++ b/Frontend/src/pages/Analytics/Analytics.css
@@ -2,3 +2,22 @@
     color: white;
   }
   
+.slimscroll-custom {
+    scrollbar-width: thin; /* For Firefox */
+    scrollbar-color: rgba(255, 255, 255, 0.5) rgba(16, 16, 16, 0.7); /* For Firefox */
+}
+
+.slimscroll-custom::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+    height: 8px; /* Height of the scrollbar */
+}
+
+.slimscroll-custom::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.5); /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Rounded corners for the scrollbar thumb */
+}
+
+.slimscroll-custom::-webkit-scrollbar-track {
+    background: rgba(16, 16, 16, 0.7); /* Background of the scrollbar track */
+}
+  
