--- a/App/src/Assets/Sidebar/Sidebar.css
+++ b/App/src/Assets/Sidebar/Sidebar.css
@@ -28,3 +28,15 @@
   .animate__easeOutRight {
     animation: easeOutRight 0.5s forwards; /* Adjust duration as needed */
   }
+
+  /* Hide the spin buttons in WebKit browsers */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Hide spin buttons in Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
