--- a/App/src/Assets/components/miscellaneous/Scrollbar.css
+++ b/App/src/Assets/components/miscellaneous/Scrollbar.css
@@ -1,13 +1,37 @@
+.scrollbar-custom {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
+}
+
 .scrollbar-custom::-webkit-scrollbar {
-  width: 8px; /* Adjust the width of the scrollbar */
+  width: 8px;
   height: 8px;
 }
 
 .scrollbar-custom::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.5); /* Color of the scrollbar thumb */
-  border-radius: 10px; /* Rounded corners */
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
 }
 
 .scrollbar-custom::-webkit-scrollbar-track {
-  background: transparent; /* Background of the scrollbar track */
+  background: transparent;
+}
+
+/* Firefox */
+.scrollbar-custom {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
+}
+
+/* For mobile devices */
+@media (max-width: 768px) {
+  .scrollbar-custom {
+    -webkit-overflow-scrolling: touch;
+    overflow-y: auto;
+  }
+  
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
 }
